# lenina-mcp

./: .gitignore  CHANGELOG.md  README.md  mcp_server.py  prd.json  pyproject.toml  requirements.txt
skills/: lenina.md
